--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Nganjuk Abirupa</string>
+    <string name="default_web_client_id">1004349335287-jtbvsoctlcnb4qrku3sb1advpnhesqtj.apps.googleusercontent.com</string>
 </resources>
